test/e2e/case/envoy/docker-compose.yml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

version: '2.1'

services:

  oap:
    extends:
      file: ../../base/base-compose.yml
      service: oap
    environment:
      SW_CONFIGURATION: none
      SW_LOG_LAL_FILES: envoy-als
      SW_ENVOY_METRIC_ALS_HTTP_ANALYSIS: mx-mesh,persistence
    volumes:
      - ./envoy-als.yaml:/skywalking/config/lal/envoy-als.yaml
    ports:
      - 12800

  satellite:
    extends:
      file: ../../base/base-compose.yml
      service: satellite
    ports:
      - 11800
    environment:
      SATELLITE_GRPC_CLIENT: oap:11800
    depends_on:
      oap:
        condition: service_healthy

  provider:
    extends:
      file: ../../base/base-compose.yml
      service: provider
    ports:
      - 9090
    depends_on:
      satellite:
        condition: service_healthy

  envoy:
    image: envoyproxy/envoy-alpine:${ENVOY_VERSION}
    ports:
      - 9090
    networks:
      - e2e
    volumes:
      - ./envoy-${ENVOY_VERSION}.yaml:/etc/envoy/envoy.yaml
    depends_on:
      provider:
        condition: service_healthy
    healthcheck:
      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:9090/info --post-data='' || exit 1"]
      interval: 5s
      timeout: 60s
      retries: 120

  consumer:
    extends:
      file: ../../base/base-compose.yml
      service: consumer
    ports:
      - 9090
    environment:
      PROVIDER_URL: http://envoy:9090
    depends_on:
      satellite:
        condition: service_healthy
      provider:
        condition: service_healthy
      envoy:
        condition: service_healthy

networks:
  e2e:
