test/e2e/case/envoy/envoy-v1.19.0.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

node:
  id: ingress-v1
  cluster: card-api-cluster-v1
  locality:
    region: ap-southeast-1
    zone: zone1
    sub_zone: subzone1
  metadata:
    skywalking: iscool
    envoy: isawesome
    LABELS:
      app: test-app-v1
    NAME: service-instance-name-v1

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.http_grpc
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig"
                      common_config:
                        log_name: skywalking
                        transport_api_version: V3
                        grpc_service:
                          envoy_grpc:
                            cluster_name: skywalking-satellite
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: app
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service-http
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service-http
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 10s
      load_assignment:
        cluster_name: service-http
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: provider
                      port_value: 9090
    - name: skywalking-satellite
      connect_timeout: 5s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: { }
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: skywalking-satellite
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: satellite
                      port_value: 11800
